--- a/css/style.css
+++ b/css/style.css
@@ -333,13 +333,18 @@ transform: scale(1.1);
   position: absolute;
   list-style: none;
   display: none;
-  padding: 10px 0;
-  /* background: red;
-  width: 100px;
+  padding: 10px;
+  background: rgb(255, 246, 246);
+  width: 175px;
   height: 40px;
   text-align: left;
   float: left;
-  font-size: 20px; */
+  font-size: 14px;
+  border-radius: 2px;
+  box-shadow: 2px 1px 2px rgb(0, 0, 0, 0.2);
+}
+#user-main a:hover {
+  text-decoration: none;
 }
 #user:hover #user-main {
   display: block;
