--- a/css/hoanthanh.css
+++ b/css/hoanthanh.css
@@ -1,51 +1,46 @@
 @charset "utf-8";
 /* CSS Document */
-#order{
-	margin-top: 20px;
+#order {
+  margin-top: 20px;
 }
-.ordered{
-	width:100%;
-	height:auto;
-	margin-right:20px;
-	margin-bottom:20px;
-	border:1px solid #6C0;
-	padding:10px;
-	}
-	
-.ordered p{
-	width:100%;
-	height:auto;
-	margin-bottom:5px;
-	}
-	
-.ordered p{
-	font-size: 13px;
-	color:#6C0;
-	text-align:justify;
-	}
-	
-.ordered p.ordered-report{
-	font-weight:bold;
-	}
-	
-#return-home{
-	width:100%;
-	height:auto;
-	margin-right:30px;
-	}	
+.ordered {
+  width: 100%;
+  height: auto;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  border: 1px solid var(--color-pri);
+  padding: 10px;
+}
 
-#return-home a{	
-	font-size: 13px;
-	font-weight:bold;
-	color:#000;
-	text-decoration:none;
-	}	
-	
-#return-home a:hover{
-	color:#C40000;
-	}	
-	
-	
-	
-	
-	
+.ordered p {
+  width: 100%;
+  height: auto;
+  margin-bottom: 5px;
+}
+
+.ordered p {
+  font-size: 13px;
+  color: var(--color-pri);
+  text-align: justify;
+}
+
+.ordered p.ordered-report {
+  font-weight: bold;
+}
+
+#return-home {
+  width: 100%;
+  height: auto;
+  margin-right: 30px;
+}
+
+#return-home a {
+  font-size: 13px;
+  font-weight: bold;
+  color: var(--color-black);
+  text-decoration: none;
+}
+
+#return-home a:hover {
+  color: var(--color-pri);
+}
