--- a/css/timkiem.css
+++ b/css/timkiem.css
@@ -1,22 +1,29 @@
-.search-bar span{
-	color:#FF0;
-	}
-#pagination{
-	text-align:right;
-	}
-.pagination>li:first-child>a, .pagination>li:first-child>span {
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
+.search-bar span {
+  color: var(--color-pri);
+}
+#pagination {
+  text-align: right;
+}
+.pagination > li:first-child > a,
+.pagination > li:first-child > span {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
-.pagination>li:last-child>a, .pagination>li:last-child>span {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-}		
-#pagination a{
-	color:#000;
-	}
-.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus{
-	background:#C40000;
-	border-color:#C40000;
-	}	
+.pagination > li:last-child > a,
+.pagination > li:last-child > span {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+#pagination a {
+  color: var(--color-black);
+}
+.pagination > .active > a,
+.pagination > .active > span,
+.pagination > .active > a:hover,
+.pagination > .active > span:hover,
+.pagination > .active > a:focus,
+.pagination > .active > span:focus {
+  background: var(--color-pri);
+  border-color: var(--color-pri);
+}
