--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,8 @@ body {
 }
 #menu ul li a {
   color: var(--color-black);
+  width: 100%;
+  display: inline-block;
 }
 #menu ul li:hover {
   cursor: pointer;
@@ -212,7 +214,7 @@ body {
 .product-item {
   padding-left: 5px;
   padding-right: 5px;
-  border: 1px solid var(--color-border);
+  /* border: 1px solid var(--color-border); */
   max-width: 24%;
   margin: 4px !important;
   box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.2);
