--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ body {
   padding: 10px;
   border-bottom: 1px solid var(--color-pri);
   box-sizing: content-box;
+  max-height: 30px;
 }
 .header-navbar {
   display: flex;
@@ -192,6 +193,11 @@ body {
   display: block;
 }
 
+#login {
+  padding-top: 7px;
+  margin-bottom: -4px;
+}
+
 #login-main {
   float: right;
   font-size: 14px;
@@ -296,17 +302,27 @@ body {
   box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.2);
   border-radius: 2px;
 }
+.product-item:hover {
+  transform: translateY(-5px);
+}
+
 .product-item img {
   margin: 10px;
   transition: transform 1s;
   width: 190px;
   height: 165px;
 }
-.product-item:hover {
-  transform: translateY(-5px);
+
+#prd-thumb img {
+  transition: transform 1s;
 }
+
 .product-item img:hover {
   transform: scale(1.1);
+}
+
+#prd-thumb img:hover {
+  transform: scale(1.1) !important;
 }
 
 .product-item h3 {
@@ -374,13 +390,10 @@ body {
     background: var(--color-white);
   }
   #search {
-border: none;
+    border: none;
   }
-  #y-cart-main {
-    top: 0;
-    left: 0;
-    margin: auto;
-    position: relative;
+  .header-cart {
+    padding: 2px 10px;
   }
   #logo {
     text-align: center;
@@ -443,6 +456,10 @@ border: none;
   height: 30px;
   border-radius: 50px;
   opacity: 0.8;
+}
+
+#myBtn:hover {
+  opacity: 0.5;
 }
 
 .min-height {
