--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,8 @@ body {
   /* padding: 10px; */
   border-bottom: 1px solid var(--color-pri);
   box-sizing: content-box;
-  max-height: 35px;
+  height: 60px;
+  max-height: 60px;
 }
 .header-navbar {
   display: flex;
@@ -141,7 +142,7 @@ body {
   margin: 0;
   max-height: 50vh;
   margin-bottom: 10px;
-  overflow-y: scroll;  
+  overflow-y: scroll;
 }
 
 .header-cart-item {
@@ -458,6 +459,9 @@ body {
   .header-cart {
     padding: 2px 10px;
   }
+  .header-cart__view {
+    width: 320px;
+  }
   #logo {
     text-align: center;
   }
@@ -539,7 +543,6 @@ body {
 .margin-left {
   margin-left: 20px;
 }
-
 
 /* //chat box  */
 iframe {
